use atom-one-dark theme

--- a/src/app.less
+++ b/src/app.less
@@ -5,6 +5,7 @@
 @import '@fontsource-variable/literata/standard-italic.css';
 // @import 'reveal.js/dist/reveal.css';
 // @import 'reveal.js/dist/theme/black.css';
-@import 'reveal.js/plugin/highlight/monokai.css';
+// @import 'reveal.js/plugin/highlight/zenburn.css';
 @import './reveal.less';
+@import './atom-one-dark.less';
 @import './theme.less';
