--- a/src/theme.less
+++ b/src/theme.less
@@ -41,7 +41,10 @@ section.has-light-background h6 {
   --r-heading3-size: 1.3em;
   --r-heading4-size: 1em;
   --r-code-font: var(--font-mono);
-  --r-link-color: #42affa;
+  // --r-link-color: #42affa;
+  // --r-link-color-dark: #068de9;
+  // --r-link-color-hover: #8dcffc;
+  --r-link-color: var(--secondary-color);
   --r-link-color-dark: #068de9;
   --r-link-color-hover: #8dcffc;
   --r-selection-background-color: rgba(66, 175, 250, 0.75);
