--- a/src/theme.less
+++ b/src/theme.less
@@ -359,7 +359,7 @@ section.has-light-background h6 {
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: var(--secondary-color);
+  color: var(--r-link-color);
 }
 
 /*********************************************
