--- a/src/app.less
+++ b/src/app.less
@@ -9,3 +9,29 @@
 @import './reveal.less';
 @import './atom-one-dark.less';
 @import './theme.less';
+
+// global helpers
+.relative {
+  position: relative;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box {
+  padding: 2rem;
+  border: 1px solid var(--primary-color);
+  border-radius: 8px;
+  width: max-content;
+  margin-inline: auto;
+}
+
+.lime {
+  color: var(--color-lime);
+}
+.red {
+  color: var(--color-red);
+}
