added css reset and font-system

--- a/src/theme.less
+++ b/src/theme.less
@@ -22,6 +22,8 @@ section.has-light-background h6 {
   --primary-color: var(--color-lime);
   --secondary-color: var(--color-red);
 
+  --font-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --font-sans: 'Public Sans', sans-serif;
   --font-serif: 'Literata Variable', serif;
   --font-heading: 'Passion One', sans-serif;
