--- a/src/app.less
+++ b/src/app.less
@@ -6,6 +6,7 @@
 // @import 'reveal.js/dist/reveal.css';
 // @import 'reveal.js/dist/theme/black.css';
 // @import 'reveal.js/plugin/highlight/zenburn.css';
+@import './reset.less';
 @import './reveal.less';
 @import './atom-one-dark.less';
 @import './theme.less';
