--- a/src/app.less
+++ b/src/app.less
@@ -19,6 +19,13 @@
 
   .row {
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .column {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
   }
