--- a/src/app.less
+++ b/src/app.less
@@ -13,6 +13,11 @@
 
 // global helpers
 .reveal {
+  *:focus-visible {
+    outline: 1px solid var(--color-lime);
+    outline-offset: 4px;
+  }
+
   .relative {
     position: relative;
   }
