chill out the box class, add .wrapper for content wrapping

--- a/src/app.less
+++ b/src/app.less
@@ -39,8 +39,10 @@
     padding: 2rem;
     border: 1px solid var(--primary-color);
     border-radius: 8px;
-    width: max-content;
-    margin-inline: auto;
+    &.wrapper {
+      width: max-content;
+      margin-inline: auto;
+    }
   }
 
   .lime {
