--- a/src/theme.less
+++ b/src/theme.less
@@ -18,6 +18,8 @@ section.has-light-background h6 {
  *********************************************/
 :root {
   --color-lime: hsl(140, 90%, 60%);
+  --color-pale-lime: color-mix(in srgb, var(--color-lime) 50%, white);
+  --color-translucent-lime: color-mix(in srgb, var(--color-lime) 10%, transparent);
   --color-red: hsl(0, 100%, 70%);
   --primary-color: var(--color-lime);
   --secondary-color: var(--color-red);
