better block margins

--- a/src/app.less
+++ b/src/app.less
@@ -62,4 +62,8 @@
     padding: 0.2em 0.4em;
     border-radius: 4px;
   }
+
+  :where(h1, h2, h3, h4, h5, p, ul) + :where(h1, h2, h3, h4, h5, p, ul) {
+    margin-top: 1rem;
+  }
 }
