make outline color variable

--- a/src/app.less
+++ b/src/app.less
@@ -13,8 +13,10 @@
 
 // global helpers
 .reveal {
+  --outline-color: var(--color-lime);
+
   *:focus-visible {
-    outline: 1px solid var(--color-lime);
+    outline: 1px solid var(--outline-color);
     outline-offset: 4px;
   }
 
