--- a/src/theme.less
+++ b/src/theme.less
@@ -170,7 +170,7 @@ section.has-light-background h6 {
 .reveal ul {
   display: inline-block;
   text-align: left;
-  margin: 0 0 0 1em;
+  margin: 0;
 }
 
 .reveal ol {
