--- a/src/theme.less
+++ b/src/theme.less
@@ -171,6 +171,7 @@ section.has-light-background h6 {
   display: inline-block;
   text-align: left;
   margin: 0;
+  margin-block: 0.5rem;
 }
 
 .reveal ol {
@@ -179,6 +180,9 @@ section.has-light-background h6 {
 
 .reveal ul {
   list-style-type: disc;
+  li + li {
+    margin-top: 0.5rem;
+  }
 }
 
 .reveal ul ul {
