instant swap for exclusive fragments

--- a/src/reveal.less
+++ b/src/reveal.less
@@ -2069,8 +2069,8 @@ html.reveal-print .aria-status {
 .fragment.exclusive {
   max-height: 0;
   overflow: hidden;
-  transition: opacity 0.1s ease-in-out;
   opacity: 0;
+  transition: none;
   &:is(.current-fragment),
   &:has(.current-fragment) {
     max-height: 100vh;
