row/column gap/spread classes

--- a/src/app.less
+++ b/src/app.less
@@ -29,12 +29,24 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    &.gap {
+      gap: 1rem;
+    }
+    &.spread {
+      justify-content: space-between;
+    }
   }
   .column {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    &.gap {
+      gap: 1rem;
+    }
+    &.spread {
+      justify-content: space-between;
+    }
   }
 
   .box {
