add color yellow

--- a/src/theme.less
+++ b/src/theme.less
@@ -21,6 +21,7 @@ section.has-light-background h6 {
   --color-pale-lime: color-mix(in srgb, var(--color-lime) 50%, white);
   --color-translucent-lime: color-mix(in srgb, var(--color-lime) 10%, transparent);
   --color-red: hsl(0, 100%, 70%);
+  --color-yellow: hsl(50, 70%, 70%);
   --primary-color: var(--color-lime);
   --secondary-color: var(--color-red);
 
