--- a/src/lib/deck/CurrentColorLayout.less
+++ b/src/lib/deck/CurrentColorLayout.less
@@ -6,19 +6,22 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   padding-bottom: 5rem;
+  &.color-mix-layout {
+    padding-bottom: 20rem;
+  }
   color: white;
 
   .user-card {
-    border: 1px solid #333;
+    border: 3px solid #333;
     border-radius: 0.5rem;
+    overflow: hidden;
     // box-shadow: 0 4px 4px currentcolor;
 
     .title-bar {
-      height: 1rem;
+      height: 20px;
       background-color: #333;
-      border-radius: 0.5rem 0.5rem 0 0;
     }
 
     .name-row {
@@ -92,5 +95,31 @@
 .page:has(.box-shadow.visible) {
   .current-color-layout .user-card {
     box-shadow: 0 2px 20px currentcolor;
+  }
+}
+
+.page:has(.card-white.visible) {
+  .current-color-layout .user-card {
+    .name-row {
+      background-color: white;
+    }
+  }
+}
+.page:has(.card-color.visible) {
+  .current-color-layout .user-card {
+    color: color-mix(in srgb, currentcolor 60%, black);
+    background-color: currentColor;
+  }
+}
+.page:has(.lighter-title-bar.visible) {
+  .current-color-layout .user-card {
+    .title-bar {
+      background-color: color-mix(in srgb, currentcolor 30%, white);
+    }
+  }
+}
+.page:has(.box-shadow-transparent.visible) {
+  .current-color-layout .user-card {
+    box-shadow: 0 2px 20px color-mix(in srgb, currentcolor 50%, transparent);
   }
 }
